Update to 1.20.3-rc1, cleanup code of reading/writing files, create NbtCodecDataStorage